cambiando nombre y renombrar html y css

--- a/Primera-Evaluación/index-primera_evaluación.html
+++ b/Primera-Evaluación/index-primera_evaluación.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Mi logbook" />
         <meta name="author" content="Lenin" />
         <meta name="Keywords" content="mi primer logbook, mi diario" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style-primertrimestre.css" />
     </head>
     <body>
 
@@ -19,7 +19,7 @@
                     <li><a href="https://aules.edu.gva.es/semipresencial/login/index.php">Aules</a></li>
                     <li><a href="https://github.com/Lenin-Arcos">@Lenin-Arcos</a></li>
                     <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe">Correo</a></li>
-                    <li><a href="https://discord.com/">Discord</a></li>
+                    <li><a href="https://discord.gg/PaHQqYKD">Discord</a></li>
                 </ul>
             </nav>
             <section class="seccion">
