hice varias modificaciones images, html, css y más cosas

--- a/Segunda-Evaluación/index-segunda_evaluación.html
+++ b/Segunda-Evaluación/index-segunda_evaluación.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8" />
-        <title>1º Evaluación</title>
+        <title>2º Evaluación</title>
         <meta name="description" content="Mi logbook" />
         <meta name="author" content="Lenin" />
         <meta name="Keywords" content="mi primer logbook, mi diario" />
@@ -12,7 +12,7 @@
 
         <div class="agrupar">
             <header class="cabecera">
-                <h1>Logbook</h1>
+                <h1>⎝ ⏠⏝⏠⎠ [̲̅$̲̅(̲̅ ͡◥▶ ͜ʖ ͡◀◤)̲̅$̲̅] LogBook [̲̅$̲̅(̲̅ ͡◥▶ ͜ʖ ͡◀◤)̲̅$̲̅] ⎝ ⏠⏝⏠⎠</h1>
             </header>
             <nav class="menu">
                 <ul>
@@ -74,7 +74,8 @@
                         Con una tutoria que hice no he podido avanzar en la práctica de los dichosos contadores que aun así no explicó nada ni me dejó algo por lo que empezar ya que con máquina de estados finitos no sirvió, fue como tirar una tarde a la basura sin más.
                         Los circuitos que creado ya aparte de la tutoria, comence hacer los contadores y el reloj.
                         Las puertas lógicas ya las tenía hechas pero mi error de nuevo fue enseñarle a Mateo ya que dijo nuevamente que lo modifique que así no lo quiere, no es algo nuevo, repito fue un error enseñarle.
-                        <img src="images/ArcosLenin_Reloj24-horas.gif" alt="">
+                        <img src="images/ArcosLenin_Reloj24-horas.gif" alt="Reloj">
+                        <h3>Reloj 24 Horas</h3>
                     </p>
                 </article>
                 <article>
@@ -109,7 +110,7 @@
                 Estudiante y usuario de GitHub <a href="https://github.com/Lenin-Arcos">@Lenin-Arcos</a>, 1º Sistemas de Telecomunicación e Informáticos realizando el curso en <a href="http://www.cavanilles.org/"> IES Antonio José Cavanilles</a> año escolar 2021-2022
             </aside>
             <footer>
-                ლ (ಠ_ಠ ლ)   Derechos no reservados, esto es de libre albedrío   ( ͡ ͜ʖ ͡ )
+                (ง •̀_•́)ง (ง •̀_•́)ง (ง •̀_•́)ง Derechos no reservados, esto es de libre albedrío  ผ(•̀_•́ผ) ผ(•̀_•́ผ) ผ(•̀_•́ผ)
             </footer>
         </div>
         
